fixed styles on smaller width screens (phones)

--- a/project/templates/static/styles/attendance.css
+++ b/project/templates/static/styles/attendance.css
@@ -1,5 +1,4 @@
 .logout {
-    position: absolute;
     top: 10px;
     right: 10px;
     background-color: blue;
@@ -14,6 +13,12 @@
 .top {
     display: flex;
     justify-content: space-between;
+}
+@media (max-width: 500px) {
+    .top {
+        flex-direction: column-reverse;
+        align-items: center;
+    }
 }
 
 .scanner {
